Add view student info and change logs
