# src/docs/swagger.json
@@ -100,6 +100,48 @@
             }
         },
         "/api/v1/students/{stud-number}/": {
+            "get": {
+                "description": "View full information about student.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "View information about student",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Student Number",
+                        "name": "stud-number",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Данные о студенте успешно обновлены!",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Параметр не должен быть пустой\" | \"Параметр должен быть числом!",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Студент не найден",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Проблемы на стороне сервера.",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Change in database group information about student.",
                 "produces": [
